<resources>
    <string name="app_name">Mobile Electric Power Meter</string>
    <string name="measurement_value">Measurement Value (in kW/h)</string>
    <string name="measurement_date">Measurement date</string>
    <string name="measurement_time">Time of measurement</string>
    <string name="add_new_meter">Add new meter measurement</string>
    <string name="invalid_not_saved">Given measurement data is invalid and cannot be saved</string>
    <string name="add_new_meter_title">Add new meter entry</string>
    <string name="upload_multiple_entries">Upload Multiple Entries</string>
    <string name="meter_deleted">Meter entry successfully deleted</string>
    <string name="undo">UNDO</string>
    <string name="meter_chart">Meter Chart</string>
    <string name="meter_list">Meters</string>
    <string name="unknown_tab">Unknown tab #%1$d</string>
    <string name="export_entries">Export to file</string>
</resources>